Support running Freeplane under Java 8 and Java 11 on Windows