@@ -1,5 +1,5 @@
 java ^
---add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED ^
---add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED ^
 -Xmx1g -Dorg.freeplane.userfpdir="%APPDATA%\\Freeplane" ^
--jar freeplanelauncher.jar %*
+-cp "freeplanelauncher.jar;framework.jar" ^
+org.freeplane.launcher.JavaLauncher ^
+%*
